# PGW-aggregator

./: README.md  example-config.conf  example-pgw-to-kafka.conf
ASN/: AFChargingIdentifier.c  AFChargingIdentifier.h  AFRecordInformation.c  AFRecordInformation.h  APNSelectionMode.c  APNSelectionMode.h  AccessPointNameNI.c  AccessPointNameNI.h  AccessPointNameOI.c  AccessPointNameOI.h  AddressString.c  AddressString.h  BCDDirectoryNumber.c  BCDDirectoryNumber.h  CAMELAccessPointNameNI.c  CAMELAccessPointNameNI.h  CAMELAccessPointNameOI.c  CAMELAccessPointNameOI.h  CAMELInformationMM.c  CAMELInformationMM.h  CAMELInformationPDP.c  CAMELInformationPDP.h  CAMELInformationSMS.c  CAMELInformationSMS.h  CSGAccessMode.c  CSGAccessMode.h  CSGId.c  CSGId.h  CTEID.c  CTEID.h  CallDuration.c  CallDuration.h  CallReferenceNumber.c  CallReferenceNumber.h  CalledNumber.c  CalledNumber.h  CallingNumber.c  CallingNumber.h  CauseForRecClosing.c  CauseForRecClosing.h  (+173 more)
ASN/Sources/: APNSelectionMode.h  AccessPointNameNI.c  AccessPointNameNI.h  AccessPointNameOI.c  AddressString.c  AddressString.h  BCDDirectoryNumber.c  CAMELAccessPointNameNI.c  CAMELAccessPointNameNI.h  CAMELAccessPointNameOI.c  CAMELAccessPointNameOI.h  CAMELInformationPDP.c  CAMELInformationPDP.h  CAMELInformationSMS.c  CAMELInformationSMS.h  CSGAccessMode.h  CSGId.c  CTEID.c  CTEID.h  CallReferenceNumber.c  CallReferenceNumber.h  CalledNumber.c  CallingNumber.c  CauseForRecClosing.c  CellId.c  CellId.h  ChangeCondition.h  ChangeOfCharCondition.c  ChangeOfMBMSCondition.c  ChangeOfMBMSCondition.h  ChangeOfServiceCondition.c  ChargingCharacteristics.c  ChargingCharacteristics.h  ChargingID.c  ChargingRuleBaseName.c  DataVolumeGPRS.c  DataVolumeMBMS.c  DataVolumeMBMS.h  DefaultSMS-Handling.h  DiameterIdentity.c  (+92 more)
ASN/skeletons/: BIT_STRING.c  GeneralizedTime.c  IA5String.c  INTEGER.c  Makefile.am  NativeInteger.c  NumericString.c  OBJECT_IDENTIFIER.c  OBJECT_IDENTIFIER.h  OCTET_STRING.c  PrintableString.c  UTCTime.c  UTF8String.c  VisibleString.c  constr_CHOICE.c  constr_SEQUENCE.c  constr_SET.c  constr_SET_OF.c  constraints.h  per_support.c
ASN/skeletons/standard-modules/: ASN1-Object-Identifier-Module.asn1  ASN1C-UsefulInformationObjectClasses.asn1  README
ASN/skeletons/tests/: Makefile.am
CDRParser/CDRParser/: CMakeLists.txt  CMakeLists.txt.user.bak  main.cpp
CDRParser/build-CDRParser-Desktop-Default/: CDRParser  CDRParser.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
Common/: Common.h  LogWriter.cpp  LogWriter.h  Utils.cpp  Utils.h
Ericsson_ASN_R13/: AFChargingIdentifier.c  AFChargingIdentifier.h  AFRecordInformation.c  AFRecordInformation.h  APNSelectionMode.c  APNSelectionMode.h  AccessPointNameNI.c  AccessPointNameNI.h  ActiveTimeMethod.c  ActiveTimeMethod.h  AddressString.c  AddressString.h  CallDuration.c  CallDuration.h  CauseForRecClosing.c  CauseForRecClosing.h  ChChSelectionMode.c  ChChSelectionMode.h  ChangeCondition.c  ChangeCondition.h  ChangeOfCharCondition.c  ChangeOfCharCondition.h  ChangeOfServiceCondition.c  ChangeOfServiceCondition.h  ChargingCharacteristics.c  ChargingCharacteristics.h  ChargingID.c  ChargingID.h  CreditControlFailureReport.c  CreditControlFailureReport.h  CreditControlInfo.c  CreditControlInfo.h  CreditRequestStatus.c  CreditRequestStatus.h  CreditRequestType.c  CreditRequestType.h  CreditResultCode.c  CreditResultCode.h  DataVolumeGPRS.c  DataVolumeGPRS.h  (+96 more)
Ericsson_ASN_R13/Sources/: .~lock.pgw-r13.txt#  Makefile.am.sample  compile_asn.sh  pgw-optional.asn  pgw-r13-fixed.txt  pgw-r13.asn  pgw-r13.txt
PGW_aggregator/: Aggregator.cpp  Aggregator.cpp.orig  Aggregator.h  Aggregator.h.orig  CDRRecord.cpp  CDRRecord.h  CMakeLists.txt  Common.h  Config.cpp  Config.h  ConfigContainer.cpp  DBConnect.h  ExportRules.cpp  ExportRules.h  LogWriter.cpp  LogWriter.h  LogWriterOtl.cpp  LogWriterOtl.h  MainLoopController.cpp  MainLoopController.h  Mobile_Data_Charger.sql  OTL_Header.h  Parser.cpp  Parser.cpp.orig  Parser.h  Parser.h.orig  README.md  Session.cpp  Session.h  Utils.cpp  Utils.h  main.cpp  main.cpp.autosave  main.cpp.orig  otl_utils.cpp  otl_utils.h  otlv4.h  otlv4.h.old  sqlexecutor.cpp  sqlexecutor.h
Sources/: Aggregator.h.orig  CMakeLists.txt  LockFreeQueueWithSize.h  LogWriter.h  OTL_Header.h  PGW_aggregator.ini  Session.h  TODOs.txt  main.cpp
Tests/: Test 1. Per File aggregation test.txt
pgw-parser/: CMakeLists.txt  main.cpp
pgw-to-kafka/: CMakeLists.txt  CMakeLists.txt.user.18  Common.h  Config.cpp  Config.h  LogWriter.cpp  LogWriter.h  MainLoopController.cpp  MainLoopController.h  Parser.cpp  Parser.cpp.orig  Parser.h  Utils.cpp  Utils.h  main.cpp  pgw-cdr-avro-schema.avsc  pgw_cdr_avro.hh  pgw_cdr_schema_avro.avsc
